# config/packages/nelmio_api_doc.yaml
@@ -1,5 +1,6 @@
 # config/packages/nelmio_api_doc.yaml
 nelmio_api_doc:
+    use_validation_groups: true
     documentation:
         info:
             title: Wine API
@@ -77,12 +78,12 @@ nelmio_api_doc:
                             description: Invalid data
                         '415':
                             description: Unsupported content type
-            
-            /logout:
-                post:
-                    description: User Logout
-                    tags:
-                        - User
+
+#            /logout:
+#                post:
+#                    description: User Logout
+#                    tags:
+#                        - User
             /api/sensor:
                 post:
                     tags:
@@ -242,3 +243,4 @@ nelmio_api_doc:
     areas:
         path_patterns:
             - ^/api(?!/doc$) # Matches any path starting with /api except /api/doc
+
